# ocr-google-layout-parser

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude/skills/pdf-ocr/: SKILL.md
docs/: CHANGELOG.md  implementation-plan.md
src/: batch_processor.py  config.py  converter.py  logger.py  main.py  merger.py  processor.py  splitter.py
src/exporters/: block_utils.py  html_exporter.py  markdown_exporter.py
