[project]
name = "gcs-api-ocr"
version = "0.1.0"
description = "GCP Document AI Layout Parser를 활용한 PDF OCR 파서"
readme = "README.md"
license = "MIT"
authors = [{ name = "dev-chlee", email = "dev-chlee@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = [
    "google-cloud-documentai>=2.20.0",
    "google-cloud-documentai-toolbox>=0.13.0",
    "google-cloud-storage>=2.10.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
]

[project.urls]
Repository = "https://github.com/dev-chlee/gcs-api-ocr"

[project.scripts]
gcs-ocr = "src.main:main"
